# PLYR-Qt

./: .gitignore  CDRIP_STRATEGY.md  CD_READER_PLAN.md  CD_READER_RESEARCH_FINAL.md  CD_SHIELD.md  CMakeLists.txt  CROSS_PLATFORM.md  README.md  SCANCERTO_PLAN.md
docs/: AUDIO_THREADING.md  EQ_RESEARCH.md  LIBRARY_METADATA_PLAN.md  LIBRARY_SWEEPER_PLAN.md  METADATA_PIPELINE_AUTOMATED.md  METADATA_PLAN.md
docs/archive/: CD_READER_RESEARCH.md  CD_READER_RESEARCH_ADDENDUM.md
presets/: 01_simple_zoom.milk  02_swirl.milk  03_kaleidoscope.milk
qml/: AudioFeaturesHud.qml  CdDiscCanvas.qml  CqtSpectrogramView.qml  EqBandSlider.qml  EqCurveOverlay.qml  EqPanel.qml  EqPresetChip.qml  FolderPicker.qml  HilbertRosetteView.qml  Main.qml  MainMobile.qml  MarqueeText.qml  MfccTrajectoryView.qml  MilkdropView.qml  PLYRSeekSlider.qml  PdeView.qml  PersistenceBarcodeView.qml  PlayingBars.qml  RipView.qml  ScopeView.qml  ShaderToyPane.qml  SpectrumView.qml  SsmScrubber.qml  SyncTuner.qml  TonalTorusView.qml  TonnetzOverlay.qml
resources/: drive_offsets.json
resources/icons/: Concerto.icns
scripts/: import_drive_offsets.py
shaders/: cd_disc.frag  cd_disc.vert  cqt_spectrogram.frag  cqt_spectrogram.vert  hilbert_decay.frag  hilbert_decay.vert  hilbert_dot.frag  hilbert_dot.vert  mfcc_trajectory.frag  mfcc_trajectory.vert  milkdrop_composite.frag  milkdrop_composite.vert  milkdrop_warp.frag  milkdrop_warp.vert  pde_chladni.frag  pde_grayscott.frag  pde_grayscott_display.frag  pde_quad.vert  scope_decay.frag  scope_decay.vert  scope_segment.frag  scope_segment.vert  spectrum.frag  spectrum.vert  ssm_2d.frag  ssm_2d.vert  ssm_inline.frag  ssm_inline.vert  st_domain_warp.frag  st_domain_warp.vert  st_polar_spectrum.frag  st_polar_spectrum.vert  st_reaction_diffusion.frag  st_reaction_diffusion.vert  st_spectrum_tunnel.frag  st_spectrum_tunnel.vert  st_waveform_heightmap.frag  st_waveform_heightmap.vert  tonal_torus.frag  tonal_torus.vert  (+2 more)
src/: AcoustIdProvider.cpp  AcoustIdProvider.h  ArVerify.cpp  ArVerify.h  AudioClock_macOS.h  AudioClock_macOS.mm  AudioEngine.cpp  AudioEngine.h  AudioFeatures.cpp  AudioFeatures.h  AudioFrameHash.cpp  AudioFrameHash.h  AudioTagIo.cpp  AudioTagIo.h  AudioWorker.cpp  AudioWorker.h  CdDevice.h  CdDevice_macOS.cpp  CdShield.h  CdShield_macOS.cpp  CdTextReader.cpp  CdTextReader.h  ChromaAnalyzer.cpp  ChromaAnalyzer.h  CqtAnalyzer.cpp  CqtAnalyzer.h  CqtSpectrogram.cpp  CqtSpectrogram.h  DisplayClock_macOS.h  DisplayClock_macOS.mm  DriveOffsetDb.cpp  DriveOffsetDb.h  EqController.cpp  EqController.h  FftProcessor.cpp  FftProcessor.h  FlacDecode.cpp  FlacDecode.h  FlacEncode.cpp  FlacEncode.h  (+94 more)
